--- a/styles.css
+++ b/styles.css
@@ -121,8 +121,13 @@ h2 {
     letter-spacing: 1px;
 }
 
+.label label {
+    color: rgba(46, 46, 54, 0.5);
+}
+
 .label.active label {
-    background-color: #e48717;       
+    background-color: #e48717;
+    color: #2e2e36;
 }
 
 .difficulty {
@@ -171,7 +176,7 @@ select:focus-visible {
         margin-left: 0;
         margin-top: 20px;
         width: 718px;
-        height: 120px;
+        height: 190px;
     }
 
     .label-container {
@@ -180,6 +185,15 @@ select:focus-visible {
 }
 
 @media (max-width: 980px) {
+    *,
+    .difficulty {
+        font-size: 32px;
+    }
+
+    h2 {
+        font-size: 42px;
+    }
+
     img {
         width: 100%;
         height: auto;
